Fix submit button having webkit styling on iOS

--- a/src/css/slor/_reset.pcss
+++ b/src/css/slor/_reset.pcss
@@ -23,4 +23,9 @@ img {
   height: auto;
 }
 
+input {
+  -webkit-appearance: none;
+  
+}
+
 /* stylelint-enable */
